# CHARMTwinsights

./: CHARMTwinsight_API_Design.md  README.md  bdf.yaml
.github/: validate-metadata.yaml
.github/workflows/: validate-metadata.yaml
app/: build_all.sh  docker-compose.override.yaml  docker-compose.yml
app/atlas/postgres_data/: postmaster.pid
app/atlas/postgres_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
app/atlas/postgres_data/pg_stat_tmp/: db_0.stat  db_13532.stat  db_16384.stat  global.stat
app/hapi/: hapi.application.yaml
app/mcp_server/: Dockerfile  README.md  SUMMARY.md  pyproject.toml  test_mcp.sh
app/mcp_server/mcp_server/: __init__.py  main.py
app/model_server/model_server/: main.py
app/model_server/models/coxcopdmodel/: .dockerignore
app/model_server/models/dpcgansmodel/: predict.py
app/router/router/: main.py
app/router/router/routers/: modeling.py  stat_server_py.py  synthea.py
app/stat_server_py/: pyproject.toml
app/stat_server_py/pyserver/: fhir_utils.py  main.py
app/stat_server_py/pyserver/parsers/: README.md  __init__.py  base_parser.py  patient_parser.py  (+10 more)
app/stat_server_r/: app.R
app/streamlit_ui/: .dockerignore  Dockerfile  README.md  api_client.py  app.py  app_backup.py  config.py  main.py  requirements.txt  utils.py
app/streamlit_ui/components/: __init__.py  sidebar.py
app/streamlit_ui/modules/: __init__.py  dashboard.py  models.py  patient_browser.py  synthetic_data.py
app/synthea_server/: Dockerfile  gen_patients.sh
app/synthea_server/synthea-pyserver/: main.py
app/vueapp/src/: App.vue
(+3 files in other folders)
